--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="container" class="code-container">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<p id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to
+            confirm your email address.</p>
+		<form id="form">
+			
+		</form>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
